# ccore_rewrite

./: .gitattributes  .gitignore  .travis.yml  INSTALL.md  Makefile.am  README.md  configure.ac  logo.txt
debian/: README  changelog  control  copyright  libccore-dev.install  libccore1.install  rules  watch
examples/: display.c  event.c  gamepad.c  icon.data  info.c  mouse.c  opengl.c  thread.c  window.c  window_icon.c  window_simple.c
include/: cc_display.h  cc_error.h  cc_event.h  cc_file.h  cc_gamepad.h  cc_info.h  cc_key.h  cc_opengl.h  cc_system.h  cc_thread.h  cc_time.h  cc_types.h  cc_window.h  ccore.h
src/: cc_error.c  cc_error_c.h  cc_event.c  cc_event_c.h
src/linux/: cc_linux_file.c  cc_linux_file.h  cc_linux_file_c.h  cc_linux_gamepad.c  cc_linux_gamepad_c.h  cc_linux_info.c  cc_linux_thread.c  cc_linux_time.c
src/win32/: cc_win32_file.c  cc_win32_file_c.h  cc_win32_gamepad.c  cc_win32_gamepad_c.h  cc_win32_window.c  cc_win32_window_c.h
src/x11/: cc_x11_display.c  cc_x11_display_c.h  cc_x11_opengl.c  cc_x11_window.c  cc_x11_window_c.h
